Inserted content in front page
Inserted profile picture and text boxes. Text boxes are made responsive so they expand to the right when window is enlarged. Textbox width is set to about 76 % so when the window is enlarged the textbox follows in size.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stine Julius</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -30,7 +31,58 @@
             </div>
         </section>
         <section id="introduction-path">
+            <div id="mountains"></div>
+            <div id="path"></div>
+            <div id="front-page-content">
+                <div class="image-side-aligned">
+                    <img src="assets/images/index-profile-picture.png" alt="Profilbillede af Stine Julius">
+                </div>
+                <div class="textbox-right">
+                    <div class="fp-textbox">
+                        <h4>HVEM ER JEG?</h4>
+                        <p>Mit navn er Stine, og jeg brænder for design i alle dens afskygninger.</p>
+                        <p>Gennem hele mit liv har jeg været fascineret af
+                            <span class="bold-body">kreativitet, udvikling og mangfoldige ideer.</span>
+                            Som barn blev kreativiteten brugt i leg, og personligt tror jeg på, at den legende tilgang
+                            hører
+                            til, selv her i voksenlivet. Legen skaber bevægelse, nye ideer og forlænger horisonten inden
+                            for
+                            multimedieverdenen.
+                        </p>
+                        <p>Jeg arbejder på at forstørre mit repertoire både med nye projekter og nye værktøjer og nyder
+                            at
+                            få et projekt til at spille.
+                            <span class="bold-body">Mon jeg kan blive en del af dit teams fremtidige projekter?</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="image-side-aligned">
 
+                </div>
+                <div class="textbox-right">
+                    <div class="fp-textbox">
+                        <h4>HVEM ER DU?</h4>
+                        <p>Arbejder du i et firma med et fast designteam, og leder du tilfældigvis efter den sidste brik
+                            til
+                            teamet?
+                            <span class="bold-body">Så er du kommet til det rette sted.</span>
+                        </p>
+                        <p>Jeg har styr på webdesign, digitalt design, og
+                            <span class="bold-body">min værktøjskasse er fyldt med gode sager.</span>
+                            Med mig
+                            på holdet kommer vi helt i mål med et
+                            <span class="bold-body">stærkt samarbejde</span>
+                            og en god tilgang til projekterne. Jeg
+                            sætter pris på ærlighed og vidensdeling i et team for at nå frem til det bedste resultat for
+                            brugerne og for virksomheden.
+                        </p>
+                        <p>Hvis jeg endnu ikke har fanget din interesse, så se endelig et udsnit af mine tidligere
+                            projekter
+                            og lær lidt mere om mine færdigheder inden for multimediedesign.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
