Inserted the last content on front page
Inserted new image between the two textboxes. Created the call to action section with text and contact button. Added hover and active to the button tag.

--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
                 <h3>Tag med på tur - så lærer vi hinanden lidt at kende.</h3>
             </div>
         </section>
+
         <section id="introduction-path">
             <div id="mountains"></div>
             <div id="path"></div>
             <div id="front-page-content">
+
                 <div class="image-side-aligned">
                     <img src="assets/images/index-profile-picture.png" alt="Profilbillede af Stine Julius">
                 </div>
+
                 <div class="textbox-right">
                     <div class="fp-textbox">
                         <h4>HVEM ER JEG?</h4>
@@ -56,9 +59,11 @@
                         </p>
                     </div>
                 </div>
-                <div class="image-side-aligned">
 
+                <div class="image-side-aligned">
+                    <img src="assets/images/index-profile-picture.png" alt="Profilbillede af Stine Julius">
                 </div>
+
                 <div class="textbox-right">
                     <div class="fp-textbox">
                         <h4>HVEM ER DU?</h4>
@@ -82,6 +87,14 @@
                         </p>
                     </div>
                 </div>
+
+                <div id="fp-call-to-action">
+                    <h3 id="fp-headline">Er du interesseret i et godt samarbejde?</h3>
+                    <button class="cta-button">
+                        <h3>KONTAKT</h3>
+                    </button>
+                </div>
+
             </div>
         </section>
     </main>
