Inserted background mountains and path on front page
Inserted svg files with mountains and path in html. Put id's on the divs and the img. Styled in css with relative positions on the div elements and absolute positions on the img files. Created a mid point in the div with "left: 50%". The img files styled and placed according to the mid point in the div element.
Added z-index to the img files, so they lay in the correct order (behind the main elements, as a background).

--- a/index.html
+++ b/index.html
@@ -32,8 +32,18 @@
         </section>
 
         <section id="introduction-path">
-            <div id="mountains"></div>
-            <div id="path"></div>
+
+            <div id="mountains">
+                <img id="left-mountains" src="assets/illustrations/left-mountains.svg"
+                    alt="Vector mountain illustration">
+                <img id="right-mountains" src="assets/illustrations/right-mountains.svg"
+                    alt="Vector mountain illustration">
+            </div>
+
+            <div id="path-position">
+                <img id="path" src="assets/illustrations/path.svg" alt="Swinging path illustration">
+            </div>
+
             <div id="front-page-content">
 
                 <div class="image-side-aligned">
@@ -94,7 +104,6 @@
                         <h3>KONTAKT</h3>
                     </button>
                 </div>
-
             </div>
         </section>
     </main>
