Created projects.html and added content
Created projects.html and projects.css. Added fonts, header and footer from index.html. Created projects section and added content for the different projects that are supposed to displayed. Styled the project elements for mobile version. Having trouble with making the style resposive for larger screens. Added photos of projects and arrow illustation.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stine Julius</title>
+    <title>Stine Julius // Portfolio</title>
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -107,6 +107,7 @@
             </div>
         </section>
     </main>
+    
     <footer>
         <section id="top-footer">
             <div id="footer-contact-information">
