Fixed responsive problem with projects section and added links to the two html files
Corrected the width, padding and placement in the projects section. Added links to the navigation in the footer, and link to front page through the logo.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
 <body>
     <header>
-        <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
-        <img src="assets/illustrations/menu.svg" alt="Burger Menu">
+        <a href="index.html">
+            <img src="assets/illustrations/logo.svg" alt="Stine Julius logo"> 
+         </a>
+         <img src="assets/illustrations/menu.svg" alt="Burger Menu">
     </header>
 
     <main>
@@ -107,7 +109,7 @@
             </div>
         </section>
     </main>
-    
+
     <footer>
         <section id="top-footer">
             <div id="footer-contact-information">
@@ -126,12 +128,12 @@
             </div>
             <div id="footer-nav">
                 <div>
-                    <p>Forside</p>
-                    <p>Om mig</p>
+                    <a href="index.html">Forside</a>
+                    <a href="about.html">Om mig</a>
                 </div>
                 <div>
-                    <p>Projekter</p>
-                    <p>Kontakt</p>
+                    <a href="projects.html">Projekter</a>
+                    <a href="contact.html">Kontakt</a>
                 </div>
             </div>
 
