--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,9 @@
 
 <body>
     <header>
-        <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
+        <a href="index.html">
+           <img src="assets/illustrations/logo.svg" alt="Stine Julius logo"> 
+        </a>
         <img src="assets/illustrations/menu.svg" alt="Burger Menu">
     </header>
 
@@ -140,12 +142,12 @@
             </div>
             <div id="footer-nav">
                 <div>
-                    <p>Forside</p>
-                    <p>Om mig</p>
+                    <a href="index.html">Forside</a>
+                    <a href="about.html">Om mig</a>
                 </div>
                 <div>
-                    <p>Projekter</p>
-                    <p>Kontakt</p>
+                    <a href="projects.html">Projekter</a>
+                    <a href="contact.html">Kontakt</a>
                 </div>
             </div>
 
