Relocated cta button style to base.css and created cta button in projects.html
Moved the button class to be used for different html files. Created cta button for projects and styled it in projects-css.

--- a/projects.html
+++ b/projects.html
@@ -119,8 +119,11 @@
             </div>
         </section>
 
-        <section>
-
+        <!-- Call to action button -->
+        <section id="projects-cta">
+            <button class="cta-button">
+                <h3>START SAMARBEJDE</h3>
+            </button>
         </section>
     </main>
 
