--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <a href="index.html">
-           <img src="assets/illustrations/logo.svg" alt="Stine Julius logo"> 
+            <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
         </a>
         <img src="assets/illustrations/menu.svg" alt="Burger Menu">
     </header>
@@ -43,6 +43,25 @@
                     <img class="box-image" src="assets/images/project-prototype.png"
                         alt="Prototype of Landsbyens Fortællinger app">
                 </div>
+                <div class="box-bodytext">
+                    <h4>Studieprojekt</h4>
+                    <p>
+                        Til dette projekt var formålet at udvikle et
+                        <span class="bold-body">interaktivt installationskoncept</span>
+                        , som havde til
+                        opgave at fortælle et gammelt formidlingsforløb i Den Fynske Landsby. Projektet blev udarbejdet
+                        i gruppesamarbejde, hvor vi hver især arbejdede med delelementerne. Det, du ser her, er
+                        udarbejdet af mig.
+                    </p>
+                    <p>
+                        Prototypen er en app, som åbner op for, at de besøgende i Den Fynske Landsby på egen hånd kan
+                        opleve landsbyen fra en fortæller, de selv vælger. Appen
+                        <span class="bold-body">åbner op for leg og gåder</span>
+                        til både
+                        børnefamilier og voksne besøgende.
+                    </p>
+                    <h4>Projektet er udarbejdet i Figma.</h4>
+                </div>
                 <div class="project-box-arrow-down">
                     <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
                 </div>
@@ -57,6 +76,23 @@
                     <img class="box-image" src="assets/images/project-prototype.png"
                         alt="Prototype of Landsbyens Fortællinger app">
                 </div>
+                <div class="box-bodytext">
+                    <h4>Studieprojekt</h4>
+                    <p>
+                        Udarbejdet i forbindelse med en workshop på multimediedesigneruddannelsen, som havde til formål
+                        at øve
+                        <span class="bold-body">CSS-animation</span>
+                        samt udvikling af spritesheet. Animationer bruges til at skabe
+                        <span class="bold-body">bevægelse og blikfang</span>
+                        og kan have en stor betydning inden for webdesign.
+                    </p>
+                    <p>
+                        Jeg har valgt at lave en animation, som kræver, at objektet bevæger sig ved hjælp af flere
+                        forskellige animationsprincipper. Disse er vigtige for at skabe en livagtig og interessant
+                        sammenhæng af bevægelser.
+                    </p>
+                    <h4>Projektet er udarbejdet i Adobe Illustrator og VisualStudioCode.</h4>
+                </div>
                 <div class="project-box-arrow-down">
                     <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
                 </div>
@@ -68,8 +104,18 @@
                     <h3>Selvportræt</h3>
                 </div>
                 <div class="project-box-image">
-                    <img class="box-image" src="assets/images/project-selfportrait.png"
-                        alt="Selfportrait">
+                    <img class="box-image" src="assets/images/project-selfportrait.png" alt="Selfportrait">
+                </div>
+                <div class="box-bodytext">
+                    <h4>Eget projekt</h4>
+                    <p>
+                        Projektet handlede om at tegne et selvportræt ud fra et allerede eksisterende billede. Jeg har
+                        arbejdet udelukkende med
+                        <span class="bold-body">pentool</span>
+                        , hvor jeg har fokuseret på farver, skygger og dybde i
+                        portrættet.
+                    </p>
+                    <h4>Projektet er udarbejdet i Adobe Illustrator.</h4>
                 </div>
                 <div class="project-box-arrow-down">
                     <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
@@ -85,6 +131,25 @@
                     <img class="box-image" src="assets/images/project-poster.png"
                         alt="Poster for Landsbyens Fortællinger app">
                 </div>
+                <div class="box-bodytext">
+                    <h4>Studieprojekt</h4>
+                    <p>
+                        Plakatdesign lavet i forbindelse med et interaktivt installationskonceptprojekt til Den Fynske
+                        Landsby. Projektet gik ud på at
+                        <span class="bold-body">fortælle et gammelt</span>
+                        formidlingsforløb igennem et nyt koncept.
+                        Projektet som helhed er udarbejdet i gruppearbejde, hvor vi uddelegerede delopgaverne. Jeg har
+                        produceret plakaten, som kan ses ovenfor.
+                    </p>
+                    <p>
+                        Plakaten fortæller med visuelle illustrationer, hvordan appen virker og hvad den indeholder. Jeg
+                        har arbejdet med
+                        <span class="bold-body">branding</span>
+                        og hvordan et produkt fremhæves og tiltrækker
+                        <span class="bold-body">interesse hos brugerne</span>.
+                    </p>
+                    <h4>Projektet er udarbejdet i Illustrator.</h4>
+                </div>
                 <div class="project-box-arrow-down">
                     <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
                 </div>
@@ -99,6 +164,14 @@
                     <img class="box-image" src="assets/images/project-productphoto.png"
                         alt="Productphoto of Instax camera">
                 </div>
+                <div class="box-bodytext">
+                    <h4>Eget projekt</h4>
+                    <p>
+                        Produktbilleder af forskellige genstande. Formålet var at udarbejde professionelle redigerede
+                        produktbilleder af udvalgte produkter, som fanger genstandene i en helt speciel stemning.
+                    </p>
+                    <h4>Projektet er udarbejdet i Adobe Lightroom CC.</h4>
+                </div>
                 <div class="project-box-arrow-down">
                     <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
                 </div>
@@ -112,6 +185,17 @@
                 <div class="project-box-image">
                     <img class="box-image" src="assets/images/project-prototype.png"
                         alt="Prototype of Landsbyens Fortællinger app">
+                </div>
+                <div class="box-bodytext">
+                    <h4>Studieprojekt</h4>
+                    <p>
+                        I forbindelse med en workshop på multimediedesigneruddannelsen var opgaven at 
+                        <span class="bold-body">skabe en historie</span>
+                        , som drejer sig om et kunstmaleri. Jeg har valgt at levendegøre billedet “Udsigt gennem tre buer
+                        i Colosseums tredje stokværk” af C.W. Eckersberg (1815). Bevægelserne gør billedet livligt og
+                        fremhæver landskabets idyl.
+                    </p>
+                    <h4>Projektet er udarbejdet i Adobe Photoshop og Adobe After Effects.</h4>
                 </div>
                 <div class="project-box-arrow-down">
                     <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
