Added link in footer contact
Added link in footer to LinkedIn, and created a class for the elements in the div (id="footer-contact-information") element. Added target blank to the link, for the link to open in a new window.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="assets/illustrations/logo.svg" alt="Stine Julius logo"> 
-         </a>
-         <img src="assets/illustrations/menu.svg" alt="Burger Menu">
+            <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
+        </a>
+        <img src="assets/illustrations/menu.svg" alt="Burger Menu">
     </header>
 
     <main>
@@ -113,15 +113,15 @@
     <footer>
         <section id="top-footer">
             <div id="footer-contact-information">
-                <div>
+                <a class="footer-contact" href="https://www.linkedin.com/in/stinejulius/" target="_blank">
                     <img src="assets/illustrations/linkedin.svg" alt="LinkedIn logo">
                     <p>@stinejulius</p>
-                </div>
-                <div>
+                </a>
+                <div class="footer-contact">
                     <img src="assets/illustrations/phone.svg" alt="Telefon ikon">
                     <p>+45 61 67 86 22</p>
                 </div>
-                <div>
+                <div class="footer-contact">
                     <img src="assets/illustrations/mail.svg" alt="Mail ikon">
                     <p>stinejulius@protonmail.com</p>
                 </div>
