--- a/projects.html
+++ b/projects.html
@@ -189,9 +189,10 @@
                 <div class="box-bodytext">
                     <h4>Studieprojekt</h4>
                     <p>
-                        I forbindelse med en workshop på multimediedesigneruddannelsen var opgaven at 
+                        I forbindelse med en workshop på multimediedesigneruddannelsen var opgaven at
                         <span class="bold-body">skabe en historie</span>
-                        , som drejer sig om et kunstmaleri. Jeg har valgt at levendegøre billedet “Udsigt gennem tre buer
+                        , som drejer sig om et kunstmaleri. Jeg har valgt at levendegøre billedet “Udsigt gennem tre
+                        buer
                         i Colosseums tredje stokværk” af C.W. Eckersberg (1815). Bevægelserne gør billedet livligt og
                         fremhæver landskabets idyl.
                     </p>
@@ -214,15 +215,15 @@
     <footer>
         <section id="top-footer">
             <div id="footer-contact-information">
-                <div>
+                <a class="footer-contact" href="https://www.linkedin.com/in/stinejulius/" target="_blank">
                     <img src="assets/illustrations/linkedin.svg" alt="LinkedIn logo">
                     <p>@stinejulius</p>
-                </div>
-                <div>
+                </a>
+                <div class="footer-contact">
                     <img src="assets/illustrations/phone.svg" alt="Telefon ikon">
                     <p>+45 61 67 86 22</p>
                 </div>
-                <div>
+                <div class="footer-contact">
                     <img src="assets/illustrations/mail.svg" alt="Mail ikon">
                     <p>stinejulius@protonmail.com</p>
                 </div>
