Created sections for content on about page
Created the intro and text sections on the about page and styled in css with flex.

--- a/about.html
+++ b/about.html
@@ -23,7 +23,47 @@
     </header>
 
     <main>
+        <section id="intro-about">
+            <h1>OM MIG</h1>
+            <img src="assets/images/index-profile-picture.png" alt="Profile picture of Stine Julius">
+        </section>
 
+        <section id="about-text-section">
+            <div id="about-headline">
+                <h3>Stine Julius</h3>
+                <p>Multimediedesigner</p>
+            </div>
+            <div id="about-text">
+                <p>
+                    <span class="bold-body">Hej!</span>
+                    Mit navn er Stine. Jeg er en ung kvinde på 22 år og er i færd med at blive uddannet
+                    multimediedesigner.
+                    <span class="bold-body">Jeg brænder for webdesign, brugergrænseflader og digital
+                        konceptudvikling.</span>
+                    Mit ønske er at bruge min kreative hjerne til at udfolde nye ideer og formidle budskab via digitale
+                    medier.
+                    <span class="bold-body">Jeg har fokus på æstetisk design, funktionalitet og brugernes behov.</span>
+                    Jeg trives godt i samarbejde med andre, hvor vi sammen skaber et rum, hvor man er åben for ideer og
+                    hvor man vidensdeler med hinanden.
+                </p>
+                <p>
+                    Personligt stræber jeg efter nye højder inden for min faglighed, med værdifulde kompetencer og godt
+                    kendskab til alle de værktøjer, der hjælper med at vække ideerne til live.
+                    <span class="bold-body">Jeg er et ordensmenneske med sans for detaljer og organisering.</span>
+                    Desuden er jeg samarbejdsvillig og elsker at lægge en plan for en produktiv dag.
+                </p>
+            </div>
+        </section>
+
+        <section></section>
+
+        <section></section>
+
+        <section></section>
+
+        <section></section>
+
+        <section></section>
     </main>
 
     <footer>
