Added flower decoration section to about.html

--- a/about.html
+++ b/about.html
@@ -55,7 +55,13 @@
             </div>
         </section>
 
-        <section></section>
+        <section class="about-flower-decoration">
+            <div class="flowers">
+                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
+                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
+                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
+            </div>
+        </section>
 
         <section></section>
 
