Created qualifications section in about.html
Created elements for each qualification, styled in css. Hobby section is a mess at the moment - don't mind it.

--- a/about.html
+++ b/about.html
@@ -63,11 +63,120 @@
             </div>
         </section>
 
-        <section></section>
+        <section id="about-qualifications">
+            <div>
+                <h3>Kompetencer</h3>
+            </div>
 
-        <section></section>
+            <div id="qualifications-content">
+                <!-- Figma -->
+                <div class="qualifications-box">
+                    <div>
+                        <h3>Figma</h3>
+                    </div>
+                    <div>
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                    </div>
+                </div>
 
-        <section></section>
+                <!-- Web- og grafiskdesign -->
+                <div class="qualifications-box">
+                    <div>
+                        <h3>Web- og grafiskdesign</h3>
+                    </div>
+                    <div>
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                    </div>
+                </div>
+
+                <!-- Creative Cloud -->
+                <div class="qualifications-box">
+                    <div>
+                        <h3>Creative Cloud</h3>
+                    </div>
+                    <div>
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                    </div>
+                </div>
+
+                <!-- UI/UX -->
+                <div class="qualifications-box">
+                    <div>
+                        <h3>UI/UX</h3>
+                    </div>
+                    <div>
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                    </div>
+                </div>
+
+                <!-- Copywriting -->
+                <div class="qualifications-box">
+                    <div>
+                        <h3>Copywriting</h3>
+                    </div>
+                    <div>
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                    </div>
+                </div>
+
+                <!-- HTML & CSS -->
+                <div class="qualifications-box">
+                    <div>
+                        <h3>HTML & CSS</h3>
+                    </div>
+                    <div>
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                    </div>
+                </div>
+            </div>
+
+            
+        </section>
+
+        <section class="about-flower-decoration">
+            <div class="flowers">
+                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
+                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
+                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
+            </div>
+        </section>
+
+        <section class="about-hobbies">
+            <div>
+                <h3>Fritidsprojekter og hobbyer</h3>
+            </div>
+            <div class="hobbies-box">
+                <div class="img-and-icons">
+                    <img class="img-icons-dots dot1" src="assets/illustrations/dot-green.svg" alt="Tiny green dot">
+                    <img class="img-icons-dots do2t2" src="assets/illustrations/dot.svg" alt="Tiny dot">
+                    <img class="img-icons-dots dot3" src="assets/illustrations/dot.svg" alt="Tiny dot">
+                    <img class="img-icons-dots dot4" src="assets/illustrations/dot.svg" alt="Tiny dot">
+                    <img src="assets/images/hobby-procreate.png"
+                        alt="Procreate drawing of tiny person on a book drawing with pencils">
+
+
+                    <!-- <div class="img-icons">
+                        <div class="img-icons-arrows">
+                            <img src="assets/illustrations/arrow-backwards.svg" alt="Arrow pointing backwards">
+                            <img src="assets/illustrations/arrow-forward.svg" alt="Arrow pointing forwards">
+                        </div>
+                        <div class="img-icons-dots">
+                            <img src="assets/illustrations/dot-green.svg" alt="Tiny green dot">
+                            <img src="assets/illustrations/dot.svg" alt="Tiny dot">
+                            <img src="assets/illustrations/dot.svg" alt="Tiny dot">
+                            <img src="assets/illustrations/dot.svg" alt="Tiny dot"> -->
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <h4>Procreate</h4>
+                </div>
+                <div>
+                    <p>Min fritid går bl.a. med at tegne og udtænke ideer med programmet Procreate. Jeg nyder at blive
+                        dygtigere ved at følge tutorials og forbedre mine færdigheder i programmet.</p>
+                </div>
+            </div>
+        </section>
 
         <section></section>
     </main>
