Created hobby section in about.html
Created hobby section with headline and hobby box including image with iluustrations positioned with absolute, a sub-headline and a paragraph. Struggled with positioning the arrows and dots because of absolute position because padding and margin wouldn't work. Decided to place it with use of position of first and last child.

--- a/about.html
+++ b/about.html
@@ -147,26 +147,18 @@
             </div>
             <div class="hobbies-box">
                 <div class="img-and-icons">
-                    <img class="img-icons-dots dot1" src="assets/illustrations/dot-green.svg" alt="Tiny green dot">
-                    <img class="img-icons-dots do2t2" src="assets/illustrations/dot.svg" alt="Tiny dot">
-                    <img class="img-icons-dots dot3" src="assets/illustrations/dot.svg" alt="Tiny dot">
-                    <img class="img-icons-dots dot4" src="assets/illustrations/dot.svg" alt="Tiny dot">
-                    <img src="assets/images/hobby-procreate.png"
-                        alt="Procreate drawing of tiny person on a book drawing with pencils">
-
-
-                    <!-- <div class="img-icons">
-                        <div class="img-icons-arrows">
-                            <img src="assets/illustrations/arrow-backwards.svg" alt="Arrow pointing backwards">
-                            <img src="assets/illustrations/arrow-forward.svg" alt="Arrow pointing forwards">
-                        </div>
-                        <div class="img-icons-dots">
-                            <img src="assets/illustrations/dot-green.svg" alt="Tiny green dot">
-                            <img src="assets/illustrations/dot.svg" alt="Tiny dot">
-                            <img src="assets/illustrations/dot.svg" alt="Tiny dot">
-                            <img src="assets/illustrations/dot.svg" alt="Tiny dot"> -->
-                        </div>
+                    <div class="hobby-dots">
+                        <img src="assets/illustrations/dot-green.svg" alt="Tiny green dot">
+                        <img src="assets/illustrations/dot.svg" alt="Tiny dot">
+                        <img src="assets/illustrations/dot.svg" alt="Tiny dot">
+                        <img src="assets/illustrations/dot.svg" alt="Tiny dot">
                     </div>
+                    <div class="hobby-arrows">
+                        <img src="assets/illustrations/arrow-backwards.svg" alt="Arrow pointing backwards">
+                        <img src="assets/illustrations/arrow-forward.svg" alt="Arrow pointing forwards">
+                    </div>
+                    <img class="hobby-image" src="assets/images/hobby-procreate.png"
+                        alt="Procreate drawing of tiny person on a book drawing with pencils">
                 </div>
                 <div>
                     <h4>Procreate</h4>
