Created call-to-action section in about.html
Created two headlines and added a button, all styled in css.

--- a/about.html
+++ b/about.html
@@ -141,6 +141,7 @@
             </div>
         </section>
 
+        <!-- Hobbies -->
         <section class="about-hobbies">
             <div>
                 <h3>Fritidsprojekter og hobbyer</h3>
@@ -170,7 +171,16 @@
             </div>
         </section>
 
-        <section></section>
+        <!-- Call to action -->
+        <section id="about-cta">
+            <div id="about-cta-headline">
+                <h3>Passer jeg lige ind i jeres team?</h3>
+                <h3>Så tøv endelig ikke med at kontakte mig!</h3>
+            </div>
+            <button class="cta-button">
+                <h3>START SAMARBEJDE</h3>
+            </button>
+        </section>
     </main>
 
     <footer>
