Created intro contact section in contact.html
Created title, decorative elements and headlines. Styled them in contact.css.

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,24 @@
         <img src="assets/illustrations/menu.svg" alt="Burger Menu">
     </header>
 
-    <main></main>
+    <main>
+        <section id="intro-contact">
+            <h1>KONTAKT</h1>
+            <div id="flowers">
+                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
+                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
+                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
+            </div>
+            <div id="contact-headlines">
+                <h3>Har du lyst til at starte et samarbejde med mig?</h3>
+                <h3>Jeg er i hvert fald frisk på nye udfordringer!</h3>
+            </div>
+        </section>
+
+        <section></section>
+
+        <section></section>
+    </main>
 
     <footer>
         <section id="top-footer">
