Created contact box in contact.html

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,20 @@
             </div>
         </section>
 
-        <section></section>
+        <section id="contact-box">
+            <div>
+                <div id="column-1">
+                    <p>Tlf.</p>
+                    <p>Mail</p>
+                </div>
+                <div id="column-2">
+                    <h3>Stine Julius</h3>
+                    <p>+45 61 67 86 22</p>
+                    <p>stinejulius@protonmail.com</p>
+                </div>
+            </div>
+
+        </section>
 
         <section></section>
     </main>
