Created contact picture section in contact.html
Added picture and styled in css.

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,11 @@
 
         </section>
 
-        <section></section>
+        <section>
+            <div id="contact-picture">
+                <img src="assets/images/index-profile-picture.png" alt="Photo of Stine Julius">
+            </div>
+        </section>
     </main>
 
     <footer>
