--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div id="front-page-content">
 
                 <div class="image-side-aligned">
-                    <img src="assets/images/index-profile-picture.png" alt="Profilbillede af Stine Julius">
+                    <img class="index-image" src="assets/images/index-profile-picture.png" alt="Profilbillede af Stine Julius">
                 </div>
 
                 <div class="textbox-right">
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="image-side-aligned">
-                    <img src="assets/images/index-profile-picture.png" alt="Profilbillede af Stine Julius">
+                    <img class="index-image" src="assets/images/index-profile-picture.png" alt="Profilbillede af Stine Julius">
                 </div>
 
                 <div class="textbox-right">
