Created midddle and bottom part in qualifications-box in about.html and styled in css.

--- a/about.html
+++ b/about.html
@@ -70,14 +70,39 @@
 
             <div id="qualifications-content">
                 <!-- Figma -->
-                <div class="qualifications-box">
+                <div>
                     <div>
-                        <h3>Figma</h3>
+                        <div class="qualifications-box">
+                            <div>
+                                <h3>Figma</h3>
+                            </div>
+                            <div>
+                                <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                    <div class="quali-middle-box">
+                        <div class="quali-programs">
+                            <img src="assets/illustrations/figma-logo.svg" alt="Figma logo">
+                        </div>
+                        <div>
+                            <p>
+                                Programmerne i Adobe-pakken er
+                                <span class="bold-body">standardværktøjskassen</span>
+                                til en multimediedesigner. Indtil videre har jeg beskæftiget mig mest med Illustrator,
+                                After
+                                Effects, Photoshop, InDesign og
+                                Lightroom CC. Målet er at blive dygtigere og bedre til at bruge flere af Adobes
+                                værktøjer.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="quali-bottom">
+                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="">
                     </div>
                 </div>
+
+
 
                 <!-- Web- og grafiskdesign -->
                 <div class="qualifications-box">
@@ -130,7 +155,7 @@
                 </div>
             </div>
 
-            
+
         </section>
 
         <section class="about-flower-decoration">
