Renamed classes in about.html.

--- a/about.html
+++ b/about.html
@@ -71,17 +71,15 @@
             <div id="qualifications-content">
                 <!-- Figma -->
                 <div>
-                    <div>
-                        <div class="qualifications-box">
-                            <div>
-                                <h3>Figma</h3>
-                            </div>
-                            <div>
-                                <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
-                            </div>
+                   <div class="quali-top">
+                        <div>
+                            <h3>Figma</h3>
+                        </div>
+                        <div>
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
                         </div>
                     </div>
-                    <div class="quali-middle-box">
+                    <div class="quali-middle">
                         <div class="quali-programs">
                             <img src="assets/illustrations/figma-logo.svg" alt="Figma logo">
                         </div>
